[package]
name = "cosm-tome"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
thiserror = "1.0.31"
delegate = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.7"
keyring = "1.2.0"


cosmrs = { version = "0.9.0", features = ["rpc", "cosmwasm"] }
cosmos-sdk-proto = "0.14.0"
tendermint-rpc = { version = "0.23.9", features= ["http"], default-features=false }

tonic = { version = "0.8.2", default-features=false }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"]}

