[package]
name = "cosm-tome"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["mockall"]

[dependencies]
async-trait = "0.1.57"
thiserror = "1.0.31"
regex = "1.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
keyring = "1.2.0"
mockall = { version = "0.11.2", optional = true }

cosmrs = { version = "0.10.0", features = ["rpc", "cosmwasm", "grpc"] }
tonic = { version = "0.8.2", default-features=false, features = ["transport", "prost"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"]}
