[package]
name = "cosm-tome"
version = "0.2.0"
edition = "2021"
authors = ["Harry Hull <harry.hull1@gmail.com>"]

readme = "README.md"
description = "Easy to use Cosmos SDK rust client library "
repository = "https://github.com/de-husk/cosm-tome.git"

keywords = ["cosmos"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[features]
mocks = ["mockall"]
os_keyring = ["keyring"]

[dependencies]
tendermint-rpc = { version = "0.28", features = ["websocket-client"] }
cosmrs = { version = "0.10.0", features = ["rpc", "cosmwasm", "grpc"] }
tonic = { version = "0.8.2", default-features=false, features = ["transport", "prost"] }

async-trait = "0.1.57"
thiserror = "1.0.31"
regex = "1.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

keyring = { version = "1.2.0", optional = true }
mockall = { version = "0.11.2", optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"]}
